--- a/web.html
+++ b/web.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>VAMSHI DEVOPS</h1>
 Hello Guys
-<p>My first paragraph.</p>
+<p>Howz my html.</p>
 
 </body>
 </html>
