--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <body>
 
-<h1>VAMSHI DEVOPS entry</h1>
+<h1>VAMSHI DEVOPS</h1>
+<img src="15012014703.jpg" alt="Mountain View" style="width:304px;height:228px;">
 Hello Guys
-<p>Howz my html!</p>
+<p>How are you</p>
 
 </body>
 </html>
