--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>VAMSHI DEVOPS</h1>
-<img src="15012014703.jpg" alt="Mountain View" style="width:304px;height:228px;">
+<img src="vamshi.jpg" alt="Mountain View" style="width:304px;height:228px;">
 Hello Guys
 <p>How are you</p>
 
