--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <body>
 
 <h1>VAMSHI DEVOPS</h1>
-<img src="vamshi.jpg" alt="Mountain View" style="width:304px;height:228px;">
-Hello Guys
+<img src="vamshi.jpg" alt="Mountain View" style="width:2448px;height:3264px;">
+
+<p></p><h2>Hello Guys</h2></p>
 <p>How are you</p>
 
 </body>
