--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 <h1>VAMSHI DEVOPS</h1>
 <img src="vamshi.jpg" alt="Mountain View" style="width:280px;height:364px;">
 
-<button type="button"
-onclick="document.getElementById('demo').innerHTML = What you gonna do by knowing about me, Get the hell out of here and do your duty...">
-Click me to know more about me.</button>
 <p></p><h2>Hello Guys</h2></p>
 <p>How are you</p>
-
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = "What you gonna do by knowing about me, Get the hell out of here and do your duty..."">
+Click here to know more about me.</button>
 </body>
 </html>
