--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p></p><h2>Hello Guys</h2></p>
 <p>How are you</p>
 <button type="button"
-onclick="document.getElementById('demo').innerHTML = "What you gonna do by knowing about me, Get the hell out of here and do your duty..."">
+onclick="document.getElementById('demo').innerHTML = 'What you gonna do by knowing about me, Get the hell out of here and do your duty...'">
 Click here to know more about me.</button>
 </body>
 </html>
