--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <button type="button"
 onclick="document.getElementById('demo').innerHTML = 'What you gonna do by knowing about me, Get the hell out of here and do your duty...'">
 Click here to know more about me.</button>
+
+<p id="demo"><h1></h1></p>
 </body>
 </html>
