--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body id="demo">
 
 <h1>VAMSHI DEVOPS</h1>
 <img src="vamshi.jpg" alt="Mountain View" style="width:280px;height:364px;">
@@ -11,6 +11,5 @@
 onclick="document.getElementById('demo').innerHTML = 'What you gonna do by knowing about me, Get the hell out of here and do your duty...'">
 Click here to know more about me.</button>
 
-<p id="demo"><h1></h1></p>
 </body>
 </html>
