--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body id="demo">
+<body style="color:red;" style="font-size:500%;" id="demo">
 
 <h1>VAMSHI DEVOPS</h1>
 <img src="vamshi.jpg" alt="Mountain View" style="width:280px;height:364px;">
