--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
-<body id="demo" style="font-size:500%;" style="color:red;">
+<style>
+body {
+    background-color: #abcdef;
+}
+
+h1 {
+    color: orange;
+    text-align: center;
+}
+
+p {
+    font-family: "Times New Roman";
+    font-size: 20px;
+}
+</style>
+<body>
 
 <h1>VAMSHI DEVOPS</h1>
 <img src="vamshi.jpg" alt="Mountain View" style="width:280px;height:364px;">
@@ -8,7 +23,7 @@
 <p><h2>Hello Guys</h2></p>
 <p>How are you</p>
 <button type="button"
-onclick="document.getElementById('demo').innerHTML = 'What you gonna do by knowing about me, Get the hell out of here and do your duty...'">
+onclick="document.write('What you gonna do by knowing about me, Get the hell out of here and do your duty...')">
 Click here to know more about me.</button>
 
 </body>
