--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ p {
 
 <p><h2>Hello Guys</h2></p>
 <p>How are you</p>
-<button type="button"
+<button type="button" style="font-size:300%;"
 onclick="document.write('What you gonna do by knowing about me, Get the hell out of here and do your duty...')">
 Click here to know more about me.</button>
 
