--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ p {
 <body>
 
 <h1>VAMSHI DEVOPS</h1>
-<img src="vamshi.jpg" alt="Mountain View" style="width:280px;height:364px;">
+<img src="vamshi.jpg" alt="My Pic" style="width:280px;height:364px;">
 
 <p><h2>Hello Guys</h2></p>
 <p>How are you</p>
