--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ p {
 <img src="vamshi.jpg" alt="My Pic" style="width:280px;height:364px;">
 
 <p><h2>Hello Guys</h2></p>
-<p>How are you</p>
+<p>How are you doing</p>
 <button type="button"
 onclick="document.write('What you gonna do by knowing about me, Get the hell out of here and do your duty...')">
 Click here to know more about me.</button>
